carbidect/com.nokia.tools.vct.common.confml.expressions/src/com/nokia/tools/vct/internal/common/confml/expressions/ConfmlParser.java
/*
* Copyright (c) 2009 Nokia Corporation and/or its subsidiary(-ies).
* All rights reserved.
* This component and the accompanying materials are made available
* under the terms of "Eclipse Public License v1.0"
* which accompanies this distribution, and is available
* at the URL "http://www.eclipse.org/legal/epl-v10.html".
*
* Initial Contributors:
* Nokia Corporation - initial contribution.
*
* Contributors:
*
* Description: 
*
*/
  package com.nokia.tools.vct.internal.common.confml.expressions;


import org.antlr.runtime.BitSet;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

@SuppressWarnings("unused")
public class ConfmlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CURRENT_REF", "SIBLING_REF", "TOP_LEVEL_SETTING_REF", "SUB_SETTING_REF", "FILE_PATH_REF", "BOOLEAN", "Number", "OR", "AND", "EQ", "NEQ", "LT", "GT", "LE", "GE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "Literal", "IntegerNumber", "RealNumber", "ScientificNumber", "Ref", "Exponent", "NEWLINE", "WS", "'('", "')'", "'.'", "'/'", "'['", "']'"
    };
    public static final int Ref=28;
    public static final int MINUS=20;
    public static final int Exponent=29;
    public static final int WS=31;
    public static final int EQ=13;
    public static final int LT=15;
    public static final int GT=16;
    public static final int Literal=24;
    public static final int MOD=23;
    public static final int SUB_SETTING_REF=7;
    public static final int IntegerNumber=25;
    public static final int OR=11;
    public static final int FILE_PATH_REF=8;
    public static final int NEWLINE=30;
    public static final int GE=18;
    public static final int MUL=21;
    public static final int AND=12;
    public static final int BOOLEAN=9;
    public static final int ScientificNumber=27;
    public static final int TOP_LEVEL_SETTING_REF=6;
    public static final int EOF=-1;
    public static final int LE=17;
    public static final int RealNumber=26;
    public static final int DIV=22;
    public static final int CURRENT_REF=4;
    public static final int SIBLING_REF=5;
    public static final int PLUS=19;
    public static final int Number=10;
    public static final int NEQ=14;

        public ConfmlParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g"; }


      public boolean isFailed() {
        return lastErrorIndex != -1;
      }
      


    public static class expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start expr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:63:1: expr : orExpr ;
    public final expr_return expr() throws RecognitionException {
        expr_return retval = new expr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        orExpr_return orExpr1 = null;



        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:63:5: ( orExpr )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:64:3: orExpr
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_orExpr_in_expr117);
            orExpr1=orExpr();
            _fsp--;

            adaptor.addChild(root_0, orExpr1.getTree());

            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (RecognitionException __exc) {
            throw __exc;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end expr

    public static class orExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start orExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:68:1: orExpr : e= andExpr ( OR e2= andExpr )* ;
    public final orExpr_return orExpr() throws RecognitionException {
        orExpr_return retval = new orExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token OR2=null;
        andExpr_return e = null;

        andExpr_return e2 = null;


        CommonTree OR2_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:68:7: (e= andExpr ( OR e2= andExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:69:3: e= andExpr ( OR e2= andExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_andExpr_in_orExpr132);
            e=andExpr();
            _fsp--;

            adaptor.addChild(root_0, e.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:70:3: ( OR e2= andExpr )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OR) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:71:5: OR e2= andExpr
            	    {
            	    OR2=(Token)input.LT(1);
            	    match(input,OR,FOLLOW_OR_in_orExpr142); 
            	    OR2_tree = (CommonTree)adaptor.create(OR2);
            	    root_0 = (CommonTree)adaptor.becomeRoot(OR2_tree, root_0);

            	    pushFollow(FOLLOW_andExpr_in_orExpr150);
            	    e2=andExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (RecognitionException __exc) {
            throw __exc;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end orExpr

    public static class andExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start andExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:75:1: andExpr : e= equalityExpr ( AND e2= equalityExpr )* ;
    public final andExpr_return andExpr() throws RecognitionException {
        andExpr_return retval = new andExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token AND3=null;
        equalityExpr_return e = null;

        equalityExpr_return e2 = null;


        CommonTree AND3_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:75:8: (e= equalityExpr ( AND e2= equalityExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:76:3: e= equalityExpr ( AND e2= equalityExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_equalityExpr_in_andExpr169);
            e=equalityExpr();
            _fsp--;

            adaptor.addChild(root_0, e.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:77:3: ( AND e2= equalityExpr )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AND) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:78:5: AND e2= equalityExpr
            	    {
            	    AND3=(Token)input.LT(1);
            	    match(input,AND,FOLLOW_AND_in_andExpr184); 
            	    AND3_tree = (CommonTree)adaptor.create(AND3);
            	    root_0 = (CommonTree)adaptor.becomeRoot(AND3_tree, root_0);

            	    pushFollow(FOLLOW_equalityExpr_in_andExpr191);
            	    e2=equalityExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (RecognitionException __exc) {
            throw __exc;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end andExpr

    public static class equalityExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start equalityExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:82:1: equalityExpr : e= relationalExpr ( EQ e2= relationalExpr | NEQ e2= relationalExpr )* ;
    public final equalityExpr_return equalityExpr() throws RecognitionException {
        equalityExpr_return retval = new equalityExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EQ4=null;
        Token NEQ5=null;
        relationalExpr_return e = null;

        relationalExpr_return e2 = null;


        CommonTree EQ4_tree=null;
        CommonTree NEQ5_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:82:13: (e= relationalExpr ( EQ e2= relationalExpr | NEQ e2= relationalExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:83:3: e= relationalExpr ( EQ e2= relationalExpr | NEQ e2= relationalExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_relationalExpr_in_equalityExpr218);
            e=relationalExpr();
            _fsp--;

            adaptor.addChild(root_0, e.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:84:3: ( EQ e2= relationalExpr | NEQ e2= relationalExpr )*
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==EQ) ) {
                    alt3=1;
                }
                else if ( (LA3_0==NEQ) ) {
                    alt3=2;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:85:5: EQ e2= relationalExpr
            	    {
            	    EQ4=(Token)input.LT(1);
            	    match(input,EQ,FOLLOW_EQ_in_equalityExpr228); 
            	    EQ4_tree = (CommonTree)adaptor.create(EQ4);
            	    root_0 = (CommonTree)adaptor.becomeRoot(EQ4_tree, root_0);

            	    pushFollow(FOLLOW_relationalExpr_in_equalityExpr237);
            	    e2=relationalExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:86:5: NEQ e2= relationalExpr
            	    {
            	    NEQ5=(Token)input.LT(1);
            	    match(input,NEQ,FOLLOW_NEQ_in_equalityExpr243); 
            	    NEQ5_tree = (CommonTree)adaptor.create(NEQ5);
            	    root_0 = (CommonTree)adaptor.becomeRoot(NEQ5_tree, root_0);

            	    pushFollow(FOLLOW_relationalExpr_in_equalityExpr251);
            	    e2=relationalExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (RecognitionException __exc) {
            throw __exc;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end equalityExpr

    public static class relationalExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start relationalExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:90:1: relationalExpr : e= additiveExpr ( LT e2= additiveExpr | GT e2= additiveExpr | LE e2= additiveExpr | GE e2= additiveExpr )* ;
    public final relationalExpr_return relationalExpr() throws RecognitionException {
        relationalExpr_return retval = new relationalExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LT6=null;
        Token GT7=null;
        Token LE8=null;
        Token GE9=null;
        additiveExpr_return e = null;

        additiveExpr_return e2 = null;


        CommonTree LT6_tree=null;
        CommonTree GT7_tree=null;
        CommonTree LE8_tree=null;
        CommonTree GE9_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:90:15: (e= additiveExpr ( LT e2= additiveExpr | GT e2= additiveExpr | LE e2= additiveExpr | GE e2= additiveExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:91:3: e= additiveExpr ( LT e2= additiveExpr | GT e2= additiveExpr | LE e2= additiveExpr | GE e2= additiveExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_additiveExpr_in_relationalExpr270);
            e=additiveExpr();
            _fsp--;

            adaptor.addChild(root_0, e.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:92:3: ( LT e2= additiveExpr | GT e2= additiveExpr | LE e2= additiveExpr | GE e2= additiveExpr )*
            loop4:
            do {
                int alt4=5;
                switch ( input.LA(1) ) {
                case LT:
                    {
                    alt4=1;
                    }
                    break;
                case GT:
                    {
                    alt4=2;
                    }
                    break;
                case LE:
                    {
                    alt4=3;
                    }
                    break;
                case GE:
                    {
                    alt4=4;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:93:5: LT e2= additiveExpr
            	    {
            	    LT6=(Token)input.LT(1);
            	    match(input,LT,FOLLOW_LT_in_relationalExpr292); 
            	    LT6_tree = (CommonTree)adaptor.create(LT6);
            	    root_0 = (CommonTree)adaptor.becomeRoot(LT6_tree, root_0);

            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr301);
            	    e2=additiveExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:94:5: GT e2= additiveExpr
            	    {
            	    GT7=(Token)input.LT(1);
            	    match(input,GT,FOLLOW_GT_in_relationalExpr309); 
            	    GT7_tree = (CommonTree)adaptor.create(GT7);
            	    root_0 = (CommonTree)adaptor.becomeRoot(GT7_tree, root_0);

            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr318);
            	    e2=additiveExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:95:5: LE e2= additiveExpr
            	    {
            	    LE8=(Token)input.LT(1);
            	    match(input,LE,FOLLOW_LE_in_relationalExpr369); 
            	    LE8_tree = (CommonTree)adaptor.create(LE8);
            	    root_0 = (CommonTree)adaptor.becomeRoot(LE8_tree, root_0);

            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr377);
            	    e2=additiveExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;
            	case 4 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:96:5: GE e2= additiveExpr
            	    {
            	    GE9=(Token)input.LT(1);
            	    match(input,GE,FOLLOW_GE_in_relationalExpr385); 
            	    GE9_tree = (CommonTree)adaptor.create(GE9);
            	    root_0 = (CommonTree)adaptor.becomeRoot(GE9_tree, root_0);

            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr393);
            	    e2=additiveExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch (RecognitionException __exc) {
            throw __exc;
          }
        finally {
        }
        return retval;
    }
    // $ANTLR end relationalExpr

    public static class additiveExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start additiveExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:101:1: additiveExpr : multiplicativeExpr ( PLUS e= multiplicativeExpr | MINUS e= multiplicativeExpr )* ;
    public final additiveExpr_return additiveExpr() throws RecognitionException {
        additiveExpr_return retval = new additiveExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PLUS11=null;
        Token MINUS12=null;
        multiplicativeExpr_return e = null;

        multiplicativeExpr_return multiplicativeExpr10 = null;


        CommonTree PLUS11_tree=null;
        CommonTree MINUS12_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:101:13: ( multiplicativeExpr ( PLUS e= multiplicativeExpr | MINUS e= multiplicativeExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:102:3: multiplicativeExpr ( PLUS e= multiplicativeExpr | MINUS e= multiplicativeExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_multiplicativeExpr_in_additiveExpr414);
            multiplicativeExpr10=multiplicativeExpr();
            _fsp--;

            adaptor.addChild(root_0, multiplicativeExpr10.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:103:3: ( PLUS e= multiplicativeExpr | MINUS e= multiplicativeExpr )*
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==PLUS) ) {
                    alt5=1;
                }
                else if ( (LA5_0==MINUS) ) {
                    alt5=2;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:104:5: PLUS e= multiplicativeExpr
            	    {
            	    PLUS11=(Token)input.LT(1);
            	    match(input,PLUS,FOLLOW_PLUS_in_additiveExpr424); 
            	    PLUS11_tree = (CommonTree)adaptor.create(PLUS11);
            	    root_0 = (CommonTree)adaptor.becomeRoot(PLUS11_tree, root_0);

            	    pushFollow(FOLLOW_multiplicativeExpr_in_additiveExpr433);
            	    e=multiplicativeExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e.getTree());

            	    }
            	    break;
            	case 2 :
